# torch-knowledge-base

./: .gitignore  AGENTS.md
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py  fsutil.py  logging.py
backend/app/core/docparse/: config.py  convert.py  convert_page.py  heading_rules.py  models.py  outline.py  phase25.py  postprocess.py  prompts.py  qwen_client.py  relevel.py  utils.py
backend/app/core/pageindex/: page_index_md.py  utils.py
backend/app/core/retrieval/: __init__.py  bm25_index.py  embed.py  fusion.py  nodes.py  tokenize.py  treestore.py  vector_index.py
backend/app/core/vlm/: client.py  parser.py  schemas.py  smoke_test.py
backend/app/modules/auth/: dependencies.py
backend/app/modules/chat/: agent.py  conversation_service.py  prompt.py  router.py  sse.py  tools.py
backend/app/modules/ingest/: catalog.py  doc_convert.py  docparse_service.py  document_service.py  graph.py  locks.py  models.py  notsure_service.py  ocr_locate.py  page_locator.py  reparse_worker.py  repository.py  review_service.py  router.py  schemas.py  service.py  task_service.py  task_worker.py  tree.py  tree_service.py
backend/app/shared/: exceptions.py
backend/app/shared/contracts/: __init__.py
backend/docker/gotenberg/: Dockerfile
backend/tests/: conftest.py
backend/tests/integration/: test_chat_router.py  test_health.py  test_ingest_pdf.py  test_ingest_router.py
backend/tests/unit/: test_bm25_index.py  test_catalog.py  test_chat_prompt.py  test_chat_sources.py  test_config.py  test_db.py  test_doc_convert.py  test_embed.py  test_fsutil.py  test_fusion.py  test_graph_build.py  test_hybrid_search.py  test_identifiers.py  test_ingest_graph.py  test_ingest_models.py  test_ingest_repository.py  test_ingest_run.py  test_kb_filter.py  test_page_locator.py  test_search_nodes.py  test_shared_exceptions.py  test_snippet.py  test_sse.py  test_tokenize.py  test_tools.py  test_tree.py  test_treestore.py  test_vector_index.py  test_vlm_client.py  test_vlm_parser.py  test_vlm_provider.py
backend/tests/unit/docparse/: test_appendix_levels.py  test_diagram_descriptions.py  test_filter_unmatched_headings.py  test_fix_flowchart.py  test_fix_heading_level_inversions.py  test_flowchart_injection.py  test_h1_unique.py  test_heading_demotions.py  test_heading_level_correction.py  test_heading_levels.py  test_inject_missing_headings.py  test_inject_running_headers.py  test_phase25.py  (+16 more)
(+37 files in other folders)
